syntax = "proto3";

option csharp_namespace = "Weather.Service.Grp";

package weather;

import "google/protobuf/timestamp.proto";

service WeatherService {
  rpc GetCurrentWeather (GetCurrentWeatherRequest) returns (GetCurrentWeatherResponse);
}

message GetCurrentWeatherRequest {
  string city = 1;
}

message GetCurrentWeatherResponse {
  google.protobuf.Timestamp timestamp = 1;
  double temperature = 2;
}
